syntax = "proto2";

package CServer;

message Request {
required int32 RFWID = 1;
required string BenchType = 2;
required string Select_Attributes = 3;
required int32 samples = 4;
required int32 BatchID = 5;
required int32 BatchSize = 6;
}

message Data {
required int32 RFWID = 2;
required int32 LastBatchID = 3;
repeated float data = 1;
}

message ReqLog {
repeated Data dat = 1;
}

